[metadata]
name = Textbook
version = 1.0.0
author = Mayank Sharma
description = Generic Task execution engine
long_description = Multithreaded generic task executor. Tasks can be arranged into pipelines and stages. This project can be used to create complex test/CI pipelines, infrastructure testing pipelines or model complex processes.
url = https://github.com/maany/textbook
keywords = task, pipeline, execution, engine, prada

[options]
python_requires = >=3.6, <4
install_requires = 
    Click

[entry_points.console_scripts]
textbook = textbook.cli:main
